# Proyectokinect

./: README.md  example.hpp  intentoNiko  main.py
KinectOneStream/: CMakeLists.txt
libfreenect2/: CMakeLists.txt
libfreenect2/src/: opencl_depth_packet_processor.cpp  opencl_kde_depth_packet_processor.cpp
libfreenect2/tools/streamer_recorder/: streamer.cpp
zed-openni/examples/SimpleColor/include/: colorviz.h
